# consultigo-home-deploying

./: .gitignore  README.md  index.html  main.py  pyproject.toml  railway.json  requirements.txt  restore_nav.py  start.sh  test_app.py
backend/: .env  Procfile  README.md  __init__.py  add_sample_problems.py  consultigo.db  env.example  main.py  requirements.txt  run_setup.py  update_database.py
backend/app/: app.py  auth.py  database.py  initial_data.py  models.py  schemas.py
backend/app/routers/: auth.py  fix_scores.py  problems.py  submissions.py  submissions_backup.py  users.py
frontend/: case-detail.html  case-studies.html  example-detail.html  examples.html  framework-detail.html  frameworks.html  guesstimate-detail.html  guesstimates.html  home.html  index.html  profile.html
frontend/css/: style.css
frontend/js/: config.js  script.js
