[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consultigo"
version = "1.0.0"
description = "Consultigo - Consulting Case Interview Practice Platform"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["backend"] 